<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/id_main_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"

    tools:context=".ui.MainFragment"
    >


    <ImageView
        android:id="@+id/mixadance_main_image"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/mixadance_main_logo"
        android:contentDescription="@string/main_logo_description_string"
        />

    <ImageView
        android:id="@+id/maxidance_action_image"
        android:layout_width="112dp"
        android:layout_height="112dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/mixadance_click_description_string"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mixadance_main_image"
        app:srcCompat="@drawable/mixadance_action_logo" />

    <TextView
        android:id="@+id/mixadance_action_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_medium"
        android:text="@string/mixadance_name_string"
        android:textColor="#FFFFFF"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@id/maxidance_action_image"
        app:layout_constraintStart_toStartOf="@id/maxidance_action_image"
        app:layout_constraintTop_toBottomOf="@id/maxidance_action_image" />

    <ImageView
        android:id="@+id/maxidance_relax_image"
        android:layout_width="112dp"
        android:layout_height="112dp"
        app:layout_constraintTop_toTopOf="@id/maxidance_action_image"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="50dp"
        app:srcCompat="@drawable/mixadance_relax_logo"
        android:contentDescription="@string/mixadance_relax_description_string"
        />
    <TextView
        android:id="@+id/mixadance_relax_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_medium"
        android:text="Mixadance Relax"
        android:textColor="#FFFFFF"
        android:textSize="17sp"
        app:layout_constraintTop_toTopOf="@id/mixadance_action_text"
        app:layout_constraintStart_toStartOf="@id/maxidance_relax_image"
        app:layout_constraintEnd_toEndOf="@id/maxidance_relax_image"
        />

    <ImageView
        android:id="@+id/mixadance_jazz_image"
        android:layout_width="112dp"
        android:layout_height="112dp"
        app:layout_constraintTop_toBottomOf="@id/maxidance_action_image"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="50dp"
        android:layout_marginTop="45dp"
        app:srcCompat="@drawable/mixadance_jazz_logo"
        android:contentDescription="@string/mixadance_jazz_description_string"
        />
    <TextView
        android:id="@+id/mixadance_jazz_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_medium"
        android:text="Mixadance Jazz"
        android:textColor="#FFFFFF"
        android:textSize="17sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/mixadance_jazz_image"
        app:layout_constraintStart_toStartOf="@id/mixadance_jazz_image"
        app:layout_constraintEnd_toEndOf="@id/mixadance_jazz_image"
        />

    <ImageView
        android:id="@+id/fitness_radio_image"
        android:layout_width="112dp"
        android:layout_height="112dp"
        app:layout_constraintTop_toTopOf="@id/mixadance_jazz_image"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="50dp"
        app:srcCompat="@drawable/fitness_radio_logo"
        android:contentDescription="@string/fitness_radio_description_string"
        />
    <TextView
        android:id="@+id/fitness_radio_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_medium"
        android:text="Fitness Radio"
        android:textColor="#FFFFFF"
        android:textSize="17sp"
        app:layout_constraintTop_toTopOf="@id/mixadance_jazz_text"
        app:layout_constraintStart_toStartOf="@id/fitness_radio_image"
        app:layout_constraintEnd_toEndOf="@id/fitness_radio_image"
        />

    <ImageView
        android:id="@+id/samui_radio_image"
        android:layout_width="112dp"
        android:layout_height="112dp"
        app:layout_constraintTop_toBottomOf="@id/mixadance_jazz_image"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="42dp"
        android:layout_marginTop="45dp"
        app:srcCompat="@drawable/samui_action_logo"
        android:contentDescription="@string/fitness_radio_description_string"
        />
    <TextView
        android:id="@+id/samui_radio_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_medium"
        android:text="Samui Radio"
        android:textColor="#FFFFFF"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/samui_radio_image"
        app:layout_constraintStart_toStartOf="@id/samui_radio_image"
        app:layout_constraintEnd_toEndOf="@id/samui_radio_image"
        />


</androidx.constraintlayout.widget.ConstraintLayout>